--- a/index.html
+++ b/index.html
@@ -55,13 +55,11 @@
       <section id="about">
         <h2>About</h2>
         <p>A software engineer who loves traveling, learning languages and writing code.</p>
-        <ul>
-          <li><a href="https://www.linkedin.com/in/mihaijulien/" target="_blank" rel="noopener">linkedin</a></li>
-          <li><a href="https://github.com/mihaijulien" target="_blank" rel="noopener">github</a></li>
-					<li><a href="https://mihaijulien.github.io/life/" target="_blank" rel="noopener">life</a></li>
-					<li><a href="https://instagram.com/julienmihai/" target="_blank" rel="noopener">instagram</a></li>
-          <li><a href="https://youtube.com/@mihaijulien" target="_blank" rel="noopener">youtube</a></li>
-        </ul>
+        <p><strong>linkedin:</strong> <a href="https://www.linkedin.com/in/mihaijulien/" rel="noopener">/in/mihaijulien/</a></p>
+        <p><strong>github:</strong> <a href="https://github.com/mihaijulien/" rel="noopener">mihaijulien</a></p>
+        <p><strong>life:</strong> <a href="https://mihaijulien.github.io/life/" rel="noopener">Julien</a></p>
+        <p><strong>instagram:</strong> <a href="https://instagram.com/julienmihai/" rel="noopener">julienmihai</a></p>
+        <p><strong>youtube:</strong> <a href="https://youtube.com/@mihaijulien" rel="noopener">@mihaijulien</a></p>
       </section>
       <section id="travel">
         <h2>Travel</h2>
