--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
         <p><strong>life:</strong> <a href="https://mihaijulien.github.io/life/" rel="noopener">Julien</a></p>
         <p><strong>instagram:</strong> <a href="https://instagram.com/julienmihai/" rel="noopener">julienmihai</a></p>
         <p><strong>youtube:</strong> <a href="https://youtube.com/@mihaijulien" rel="noopener">@mihaijulien</a></p>
+        <p><strong>italki:</strong><a href="https://www.italki.com/user/7658731" rel="noopener">7658731</a></p>
       </section>
       <section id="travel">
         <h2>Travel</h2>
         <iframe src="https://www.google.com/maps/d/embed?mid=1v3S8Zrd-U-dNitBkOB0d_HIK2vXpZrQ&ehbc=2E312F" width="640" height="480"></iframe>
-      </section>
       </section>
     </main>
   </body>
