--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Julien Mihai / жульен / 朱海文</title>
+    <title>Julien Mihai / жульен / ジュリエン / 朱海文</title>
   </head>
   <style>
     body
@@ -49,7 +49,7 @@
 </style>
   <body>
     <header>
-      <h1>Julien Mihai / жульен / 朱海文</h1>
+      <h1>Julien Mihai / жульен / ジューリエン</h1>
     </header>
     <main>
       <section id="about">
